feat: extending 2FA & Pwd change

--- a/cake-planner-frontend/projects/user-app/src/app/pages/dashboard/dashboard.html
+++ b/cake-planner-frontend/projects/user-app/src/app/pages/dashboard/dashboard.html
@@ -11,6 +11,11 @@
         <mat-icon matListItemIcon>security</mat-icon>
         <span matListItemTitle>2FA Einrichten</span>
       </a>
+
+      <a mat-list-item routerLink="/change-password">
+        <mat-icon matListItemIcon>lock</mat-icon>
+        <span matListItemTitle>Passwort ändern</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
 
