--- a/cake-planner-frontend/projects/admin-panel/src/app/pages/user-list/user-list.html
+++ b/cake-planner-frontend/projects/admin-panel/src/app/pages/user-list/user-list.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-  <span>Admin Panel</span>
+  <span>Admin Panel for</span>&nbsp;<span>{{ authService.currentUser()?.name }}</span>
+
   <span class="spacer"></span>
   <button mat-icon-button (click)="logout()">
     <mat-icon>logout</mat-icon>
@@ -21,6 +22,21 @@
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef>Email</th>
       <td mat-cell *matCellDef="let u">{{ u.email }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="group">
+      <th mat-header-cell *matHeaderCellDef>Gruppe</th>
+      <td mat-cell *matCellDef="let user">
+        <mat-form-field appearance="outline" style="width: 150px; margin-top: 5px">
+          <mat-select [value]="user.groupId" (selectionChange)="onGroupChange(user, $event.value)">
+            <mat-option [value]="null">-- Keine --</mat-option>
+
+            @for (g of groups(); track g.id) {
+            <mat-option [value]="g.id">{{ g.name }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="isAdmin">
@@ -46,6 +62,20 @@
         >
           {{ u.isActive ? 'Aktiv' : 'Gesperrt' }}
         </mat-slide-toggle>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Optionen</th>
+      <td mat-cell *matCellDef="let u">
+        <button
+          mat-icon-button
+          [color]="u.mustChangePassword ? 'warn' : ''"
+          (click)="togglePasswordForce(u)"
+          [matTooltip]="u.mustChangePassword ? 'Zwang aufheben' : 'Passwort-Änderung erzwingen'"
+        >
+          <mat-icon>{{ u.mustChangePassword ? 'lock_reset' : 'lock' }}</mat-icon>
+        </button>
       </td>
     </ng-container>
 
