--- a/cake-planner-frontend/projects/user-app/src/app/pages/dashboard/dashboard.html
+++ b/cake-planner-frontend/projects/user-app/src/app/pages/dashboard/dashboard.html
@@ -1,35 +1,54 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav mode="side" opened class="sidenav">
-    <mat-toolbar>Cake Planner</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item routerLink="calendar">
-        <mat-icon matListItemIcon>calendar_today</mat-icon>
-        <span matListItemTitle>Kalender</span>
-      </a>
+<ng-container *transloco="let t">
+  <mat-sidenav-container class="sidenav-container">
+    <mat-sidenav mode="side" opened class="sidenav">
+      <mat-toolbar>
+        {{ t('APP.TITLE') }}
+      </mat-toolbar>
 
-      <a mat-list-item (click)="open2FASetup()" style="cursor: pointer">
-        <mat-icon matListItemIcon>security</mat-icon>
-        <span matListItemTitle>2FA Einrichten</span>
-      </a>
+      <mat-nav-list>
+        <a mat-list-item routerLink="calendar">
+          <mat-icon matListItemIcon>calendar_today</mat-icon>
+          <span matListItemTitle>{{ t('MENU.CALENDAR') }}</span>
+        </a>
 
-      <a mat-list-item routerLink="/change-password">
-        <mat-icon matListItemIcon>lock</mat-icon>
-        <span matListItemTitle>Passwort ändern</span>
-      </a>
-    </mat-nav-list>
-  </mat-sidenav>
+        <a mat-list-item (click)="open2FASetup()" style="cursor: pointer">
+          <mat-icon matListItemIcon>security</mat-icon>
+          <span matListItemTitle>{{ t('MENU.2FA') }}</span>
+        </a>
 
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <span>Willkommen, {{ authService.currentUser()?.name }}</span>
-      <span class="spacer"></span>
-      <button mat-icon-button (click)="logout()">
-        <mat-icon>logout</mat-icon>
-      </button>
-    </mat-toolbar>
+        <a mat-list-item routerLink="/change-password">
+          <mat-icon matListItemIcon>lock</mat-icon>
+          <span matListItemTitle>{{ t('MENU.PASSWORD') }}</span>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
 
-    <div class="content">
-      <router-outlet></router-outlet>
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+    <mat-sidenav-content>
+      <mat-toolbar color="primary">
+        <div style="display: flex; align-items: center; gap: 10px">
+          <img
+            src="assets/logo_500x500.png"
+            alt="Logo"
+            style="height: 40px; width: 40px; border-radius: 8px"
+          />
+          <span>{{ t('DASHBOARD.WELCOME') }}, {{ authService.currentUser()?.name }}</span>
+        </div>
+
+        <span class="spacer"></span>
+
+        <div class="lang-switch">
+          <button mat-button (click)="switchLang('en')">🇬🇧 EN</button>
+          <button mat-button (click)="switchLang('de')">🇩🇪 DE</button>
+        </div>
+
+        <button mat-icon-button (click)="logout()">
+          <mat-icon>logout</mat-icon>
+        </button>
+      </mat-toolbar>
+
+      <div class="content">
+        <router-outlet></router-outlet>
+      </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</ng-container>
